<package>
  <name>line_markers</name>
  <version>1.0.0</version>
  
  <description>
  This package provides line markers capability.
  </description>
  
  <maintainer email="erasmus@iai.de">Erasmus</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>messages</build_depend>
  <build_depend>messages</build_depend>
  <build_depend>giskard_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>messages</run_depend> 
  <run_depend>giskard_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
